--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Admin Dashboard</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="site-container">
@@ -25,83 +26,75 @@
             </ul>
         </div>
         <div id="header">
-            <input type="search">
-            <button><img src="" alt="">BELL</button>
-            <div>PROFILE_PIC</div>
-            <div>Morgan Oakley</div>
-            <div id="welcome-msg">
-                <div>PROFILE_PIC</div>
+            <input type="search" class="grid-left">
+            <ul class="grid-right">
+                <li><button><img src="" alt="">BELL</button></li>
+                <li><div class="profile-pic">PROFILE_PIC</div></li>
+                <li><div>Morgan Oakley</div></li>
+            </ul>
+            <div id="welcome-msg" class="grid-left">
+                <div class="profile-pic">PROFILE_PIC</div>
                 <div>Hi there,</div>
                 <div>Morgan Oakley</div>
             </div>
-            <ul>
-                <li><a href="">New</a></li>
-                <li><a href="">Upload</a></li>
-                <li><a href="">Share</a></li>
+            <ul class="grid-right">
+                <li><button>New</button></li>
+                <li><button>Upload</button></li>
+                <li><button>Share</button></li>
             </ul>
         </div>
         <div id="main-content">
-            <div>
+            <div id="projects">
                 <div class="nav">Your Projects</div>
-                <div class="card">
-                    <div class="card-title">Super Cool Project</div>
-                    <div class="card-content">Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
-                    <div class="card-actions">
+                <div id="card-container">
+                    <div class="card">
+                        <div class="card-title">Super Cool Project</div>
+                        <div class="card-content">Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
                         <ul>
                             <li><button><img src="" alt="">FAVOURITE</button>
                             <li><button><img src="" alt="">READ</button>
                             <li><button><img src="" alt="">SHARE</button>
                         </ul>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="card-title">Less Cool Project</div>
-                    <div class="card-content">Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</div>
-                    <div class="card-actions">
+                    <div class="card">
+                        <div class="card-title">Less Cool Project</div>
+                        <div class="card-content">Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</div>
                         <ul>
                             <li><button><img src="" alt="">FAVOURITE</button>
                             <li><button><img src="" alt="">READ</button>
                             <li><button><img src="" alt="">SHARE</button>
                         </ul>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="card-title">Impossible App</div>
-                    <div class="card-content">In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</div>
-                    <div class="card-actions">
+                    <div class="card">
+                        <div class="card-title">Impossible App</div>
+                        <div class="card-content">In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</div>
                         <ul>
                             <li><button><img src="" alt="">FAVOURITE</button>
                             <li><button><img src="" alt="">READ</button>
                             <li><button><img src="" alt="">SHARE</button>
                         </ul>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="card-title">Easy Peasy App</div>
-                    <div class="card-content">Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</div>
-                    <div class="card-actions">
+                    <div class="card">
+                        <div class="card-title">Easy Peasy App</div>
+                        <div class="card-content">Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</div>
                         <ul>
                             <li><button><img src="" alt="">FAVOURITE</button>
                             <li><button><img src="" alt="">READ</button>
                             <li><button><img src="" alt="">SHARE</button>
                         </ul>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="card-title">Ad Blocker</div>
-                    <div class="card-content">Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</div>
-                    <div class="card-actions">
+                    <div class="card">
+                        <div class="card-title">Ad Blocker</div>
+                        <div class="card-content">Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</div>
                         <ul>
                             <li><button><img src="" alt="">FAVOURITE</button>
                             <li><button><img src="" alt="">READ</button>
                             <li><button><img src="" alt="">SHARE</button>
                         </ul>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="card-title">Money Maker</div>
-                    <div class="card-content">Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</div>
-                    <div class="card-actions">
+                    <div class="card">
+                        <div class="card-title">Money Maker</div>
+                        <div class="card-content">Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</div>
                         <ul>
                             <li><button><img src="" alt="">FAVOURITE</button>
                             <li><button><img src="" alt="">READ</button>
@@ -110,42 +103,46 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div id="announcements">
                 <div class="nav">Announcement</div>
-                <div class="announcement">
-                    <div class="announcement-title">Site Maintenance</div>
-                    <div class="announcement-content">Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...</div>
-                </div>
-                <div class="announcement">
-                    <div class="announcement-title">Community Share Day</div>
-                    <div class="announcement-content">Nam vel lectus tincidunt, rutrtum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</div>
-                </div>
-                <div class="announcement">
-                    <div class="announcement-title">Updated Privacy Policy</div>
-                    <div class="announcement-content">PHasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</div>
+                <div id="announcement-container">
+                    <div class="announcement">
+                        <div class="announcement-title">Site Maintenance</div>
+                        <div class="announcement-content">Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...</div>
+                    </div>
+                    <div class="announcement">
+                        <div class="announcement-title">Community Share Day</div>
+                        <div class="announcement-content">Nam vel lectus tincidunt, rutrtum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</div>
+                    </div>
+                    <div class="announcement">
+                        <div class="announcement-title">Updated Privacy Policy</div>
+                        <div class="announcement-content">Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</div>
+                    </div>
                 </div>
             </div>
-            <div>
+            <div id="trending">
                 <div class="nav">Trending</div>
-                <div class="trending">
-                    <div>PROFILE_PIC</div>
-                    <div class="trending-user">@tegan</div>
-                    <div class="trending-project">World Peace Builder</div>
-                </div>
-                <div class="trending">
-                    <div>PROFILE_PIC</div>
-                    <div class="trending-user">@morgan</div>
-                    <div class="trending-project">Super Cool Project</div>
-                </div>
-                <div class="trending">
-                    <div>PROFILE_PIC</div>
-                    <div class="trending-user">@kendall</div>
-                    <div class="trending-project">Life Changing App</div>
-                </div>
-                <div class="trending">
-                    <div>PROFILE_PIC</div>
-                    <div class="trending-user">@alex</div>
-                    <div class="trending-project">No Traffic Maker</div>
+                <div id="trending-container">
+                    <div class="trending-item">
+                        <div class="profile-pic">PROFILE_PIC</div>
+                        <div class="trending-user">@tegan</div>
+                        <div class="trending-project">World Peace Builder</div>
+                    </div>
+                    <div class="trending-item">
+                        <div class="profile-pic">PROFILE_PIC</div>
+                        <div class="trending-user">@morgan</div>
+                        <div class="trending-project">Super Cool Project</div>
+                    </div>
+                    <div class="trending-item">
+                        <div class="profile-pic">PROFILE_PIC</div>
+                        <div class="trending-user">@kendall</div>
+                        <div class="trending-project">Life Changing App</div>
+                    </div>
+                    <div class="trending-item">
+                        <div class="profile-pic">PROFILE_PIC</div>
+                        <div class="trending-user">@alex</div>
+                        <div class="trending-project">No Traffic Maker</div>
+                    </div>
                 </div>
             </div>
         </div>
