Add sidebar icon placeholders, style card btns

--- a/index.html
+++ b/index.html
@@ -10,19 +10,67 @@
 <body>
     <div id="site-container">
         <div id="sidebar">
-            <h1>Dashboard</h1>
+            <a href="">
+                <span>ICON</span>
+                <span>Dashboard</span>
+            </a>
             <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
+                <li>
+                    <a href="">
+                        <span>ICON</span>
+                        <span>Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span>ICON</span>
+                        <span>Profile</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span>ICON</span>
+                        <span>Messages</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span>ICON</span>
+                        <span>History</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span>ICON</span>
+                        <span>Tasks</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span>ICON</span>
+                        <span>Communities</span>
+                    </a>
+                </li>
             </ul>
             <ul>
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
+                <li>
+                    <a href="">
+                        <span>ICON</span>
+                        <span>Settings</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span>ICON</span>
+                        <span>Support</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span>ICON</span>
+                        <span>Privacy</span>
+                    </a>
+                </li>
             </ul>
         </div>
         <div id="header">
@@ -45,7 +93,7 @@
         </div>
         <div id="main-content">
             <div id="projects">
-                <div class="nav">Your Projects</div>
+                <div class="content-title">Your Projects</div>
                 <div id="card-container">
                     <div class="card">
                         <div class="card-title">Super Cool Project</div>
@@ -104,7 +152,7 @@
                 </div>
             </div>
             <div id="announcements">
-                <div class="nav">Announcement</div>
+                <div class="content-title">Announcement</div>
                 <div id="announcement-container">
                     <div class="announcement">
                         <div class="announcement-title">Site Maintenance</div>
@@ -121,7 +169,7 @@
                 </div>
             </div>
             <div id="trending">
-                <div class="nav">Trending</div>
+                <div class="content-title">Trending</div>
                 <div id="trending-container">
                     <div class="trending-item">
                         <div class="profile-pic">PROFILE_PIC</div>
