--- a/index.html
+++ b/index.html
@@ -99,54 +99,54 @@
                         <div class="card-title">Super Cool Project</div>
                         <div class="card-content">Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
                         <ul>
-                            <li><button><img src="" alt="">FAVOURITE</button>
-                            <li><button><img src="" alt="">READ</button>
-                            <li><button><img src="" alt="">SHARE</button>
+                            <li><a><img src="" alt="">FAVOURITE</a>
+                            <li><a><img src="" alt="">VIEW</a>
+                            <li><a><img src="" alt="">FORK</a>
                         </ul>
                     </div>
                     <div class="card">
                         <div class="card-title">Less Cool Project</div>
                         <div class="card-content">Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</div>
                         <ul>
-                            <li><button><img src="" alt="">FAVOURITE</button>
-                            <li><button><img src="" alt="">READ</button>
-                            <li><button><img src="" alt="">SHARE</button>
+                            <li><a><img src="" alt="">FAVOURITE</a>
+                            <li><a><img src="" alt="">VIEW</a>
+                            <li><a><img src="" alt="">FORK</a>
                         </ul>
                     </div>
                     <div class="card">
                         <div class="card-title">Impossible App</div>
                         <div class="card-content">In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</div>
                         <ul>
-                            <li><button><img src="" alt="">FAVOURITE</button>
-                            <li><button><img src="" alt="">READ</button>
-                            <li><button><img src="" alt="">SHARE</button>
+                            <li><a><img src="" alt="">FAVOURITE</a>
+                            <li><a><img src="" alt="">VIEW</a>
+                            <li><a><img src="" alt="">FORK</a>
                         </ul>
                     </div>
                     <div class="card">
                         <div class="card-title">Easy Peasy App</div>
                         <div class="card-content">Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</div>
                         <ul>
-                            <li><button><img src="" alt="">FAVOURITE</button>
-                            <li><button><img src="" alt="">READ</button>
-                            <li><button><img src="" alt="">SHARE</button>
+                            <li><a><img src="" alt="">FAVOURITE</a>
+                            <li><a><img src="" alt="">VIEW</a>
+                            <li><a><img src="" alt="">FORK</a>
                         </ul>
                     </div>
                     <div class="card">
                         <div class="card-title">Ad Blocker</div>
                         <div class="card-content">Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</div>
                         <ul>
-                            <li><button><img src="" alt="">FAVOURITE</button>
-                            <li><button><img src="" alt="">READ</button>
-                            <li><button><img src="" alt="">SHARE</button>
+                            <li><a><img src="" alt="">FAVOURITE</a>
+                            <li><a><img src="" alt="">VIEW</a>
+                            <li><a><img src="" alt="">FORK</a>
                         </ul>
                     </div>
                     <div class="card">
                         <div class="card-title">Money Maker</div>
                         <div class="card-content">Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</div>
                         <ul>
-                            <li><button><img src="" alt="">FAVOURITE</button>
-                            <li><button><img src="" alt="">READ</button>
-                            <li><button><img src="" alt="">SHARE</button>
+                            <li><a><img src="" alt="">FAVOURITE</a>
+                            <li><a><img src="" alt="">VIEW</a>
+                            <li><a><img src="" alt="">FORK</a>
                         </ul>
                     </div>
                 </div>
