Add Sidebar styling

--- a/index.html
+++ b/index.html
@@ -10,64 +10,66 @@
 <body>
     <div id="site-container">
         <div id="sidebar">
-            <a href="">
-                <span>ICON</span>
-                <span>Dashboard</span>
-            </a>
+            <div id="dashboard">
+                <a href="#">
+                    <img src="svgs/dashboard.svg" alt="dashboard-icon">
+                    <span>Dashboard</span>
+                </a>
+            </div>
             <ul>
                 <li>
-                    <a href="">
-                        <span>ICON</span>
+                    <a href="#">
+                        <img src="svgs/home.svg" alt="home-icon">
                         <span>Home</span>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <span>ICON</span>
+                    <a href="#">
+                        <img src="svgs/profile.svg" alt="profile-icon">
                         <span>Profile</span>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <span>ICON</span>
+                    <a href="#">
+                        <img src="svgs/message.svg" alt="messages-icon">
                         <span>Messages</span>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <span>ICON</span>
+                    <a href="#">
+                        <img src="svgs/history.svg" alt="history-icon">
                         <span>History</span>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <span>ICON</span>
+                    <a href="#">
+                        <img src="svgs/tasks.svg" alt="tasks-icon">
                         <span>Tasks</span>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <span>ICON</span>
+                    <a href="#">
+                        <img src="svgs/communities.svg" alt="communities-icon">
                         <span>Communities</span>
                     </a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="">
-                        <span>ICON</span>
+                    <a href="#">
+                        <img src="svgs/settings.svg" alt="settings-icon">
                         <span>Settings</span>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <span>ICON</span>
+                    <a href="#">
+                        <img src="svgs/support.svg" alt="support-icon">
                         <span>Support</span>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <span>ICON</span>
+                    <a href="#">
+                        <img src="svgs/privacy.svg" alt="privacy-icon">
                         <span>Privacy</span>
                     </a>
                 </li>
@@ -76,12 +78,12 @@
         <div id="header">
             <input type="search" class="grid-left">
             <ul class="grid-right">
-                <li><button><img src="" alt="">BELL</button></li>
-                <li><div class="profile-pic">PROFILE_PIC</div></li>
+                <li><button class="bell-btn"><img src="svgs/bell-ringing.svg" alt="bell-icon"></button></li>
+                <li><div class="avatar"><img src="images/avatar1.png" alt="avatar1" class="avatar"></div></li>
                 <li><div>Morgan Oakley</div></li>
             </ul>
             <div id="welcome-msg" class="grid-left">
-                <div class="profile-pic">PROFILE_PIC</div>
+                <div class="avatar">PROFILE_PIC</div>
                 <div>Hi there,</div>
                 <div>Morgan Oakley</div>
             </div>
@@ -99,54 +101,54 @@
                         <div class="card-title">Super Cool Project</div>
                         <div class="card-content">Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
                         <ul>
-                            <li><a><img src="" alt="">FAVOURITE</a>
-                            <li><a><img src="" alt="">VIEW</a>
-                            <li><a><img src="" alt="">FORK</a>
+                            <li><a href="#"><img src="" alt="">FAVOURITE</a>
+                            <li><a href="#"><img src="" alt="">VIEW</a>
+                            <li><a href="#"><img src="" alt="">FORK</a>
                         </ul>
                     </div>
                     <div class="card">
                         <div class="card-title">Less Cool Project</div>
                         <div class="card-content">Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</div>
                         <ul>
-                            <li><a><img src="" alt="">FAVOURITE</a>
-                            <li><a><img src="" alt="">VIEW</a>
-                            <li><a><img src="" alt="">FORK</a>
+                            <li><a href="#"><img src="" alt="">FAVOURITE</a>
+                            <li><a href="#"><img src="" alt="">VIEW</a>
+                            <li><a href="#"><img src="" alt="">FORK</a>
                         </ul>
                     </div>
                     <div class="card">
                         <div class="card-title">Impossible App</div>
                         <div class="card-content">In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</div>
                         <ul>
-                            <li><a><img src="" alt="">FAVOURITE</a>
-                            <li><a><img src="" alt="">VIEW</a>
-                            <li><a><img src="" alt="">FORK</a>
+                            <li><a href="#"><img src="" alt="">FAVOURITE</a>
+                            <li><a href="#"><img src="" alt="">VIEW</a>
+                            <li><a href="#"><img src="" alt="">FORK</a>
                         </ul>
                     </div>
                     <div class="card">
                         <div class="card-title">Easy Peasy App</div>
                         <div class="card-content">Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</div>
                         <ul>
-                            <li><a><img src="" alt="">FAVOURITE</a>
-                            <li><a><img src="" alt="">VIEW</a>
-                            <li><a><img src="" alt="">FORK</a>
+                            <li><a href="#"><img src="" alt="">FAVOURITE</a>
+                            <li><a href="#"><img src="" alt="">VIEW</a>
+                            <li><a href="#"><img src="" alt="">FORK</a>
                         </ul>
                     </div>
                     <div class="card">
                         <div class="card-title">Ad Blocker</div>
                         <div class="card-content">Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</div>
                         <ul>
-                            <li><a><img src="" alt="">FAVOURITE</a>
-                            <li><a><img src="" alt="">VIEW</a>
-                            <li><a><img src="" alt="">FORK</a>
+                            <li><a href="#"><img src="" alt="">FAVOURITE</a>
+                            <li><a href="#"><img src="" alt="">VIEW</a>
+                            <li><a href="#"><img src="" alt="">FORK</a>
                         </ul>
                     </div>
                     <div class="card">
                         <div class="card-title">Money Maker</div>
                         <div class="card-content">Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</div>
                         <ul>
-                            <li><a><img src="" alt="">FAVOURITE</a>
-                            <li><a><img src="" alt="">VIEW</a>
-                            <li><a><img src="" alt="">FORK</a>
+                            <li><a href="#"><img src="" alt="">FAVOURITE</a>
+                            <li><a href="#"><img src="" alt="">VIEW</a>
+                            <li><a href="#"><img src="" alt="">FORK</a>
                         </ul>
                     </div>
                 </div>
@@ -172,22 +174,22 @@
                 <div class="content-title">Trending</div>
                 <div id="trending-container">
                     <div class="trending-item">
-                        <div class="profile-pic">PROFILE_PIC</div>
+                        <div class="avatar">PROFILE_PIC</div>
                         <div class="trending-user">@tegan</div>
                         <div class="trending-project">World Peace Builder</div>
                     </div>
                     <div class="trending-item">
-                        <div class="profile-pic">PROFILE_PIC</div>
+                        <div class="avatar">PROFILE_PIC</div>
                         <div class="trending-user">@morgan</div>
                         <div class="trending-project">Super Cool Project</div>
                     </div>
                     <div class="trending-item">
-                        <div class="profile-pic">PROFILE_PIC</div>
+                        <div class="avatar">PROFILE_PIC</div>
                         <div class="trending-user">@kendall</div>
                         <div class="trending-project">Life Changing App</div>
                     </div>
                     <div class="trending-item">
-                        <div class="profile-pic">PROFILE_PIC</div>
+                        <div class="avatar">PROFILE_PIC</div>
                         <div class="trending-user">@alex</div>
                         <div class="trending-project">No Traffic Maker</div>
                     </div>
