Add Header styling

--- a/index.html
+++ b/index.html
@@ -76,16 +76,19 @@
             </ul>
         </div>
         <div id="header">
-            <input type="search" class="grid-left">
+            <div id="search-container">
+                <img src="svgs/search.svg" alt="search-icon">
+                <input type="search" class="grid-left">
+            </div>
             <ul class="grid-right">
-                <li><button class="bell-btn"><img src="svgs/bell-ringing.svg" alt="bell-icon"></button></li>
-                <li><div class="avatar"><img src="images/avatar1.png" alt="avatar1" class="avatar"></div></li>
+                <li><a href="#" class="bell-btn"><img src="svgs/bell-ringing.svg" alt="bell-icon"></a></li>
+                <li><img src="images/avatar1.png" alt="avatar1" class="avatar"></li>
                 <li><div>Morgan Oakley</div></li>
             </ul>
             <div id="welcome-msg" class="grid-left">
-                <div class="avatar">PROFILE_PIC</div>
-                <div>Hi there,</div>
-                <div>Morgan Oakley</div>
+                <img src="images/avatar1.png" alt="avatar1" class="avatar big-avatar">
+                <div class="grid-bottom">Hi there,</div>
+                <div class="grid-top">Morgan Oakley (@morgan)</div>
             </div>
             <ul class="grid-right">
                 <li><button>New</button></li>
