Add Card-container styling

--- a/index.html
+++ b/index.html
@@ -97,66 +97,66 @@
             </ul>
         </div>
         <div id="main-content">
-            <div id="projects">
+            <div id="projects" class="grid-top">
                 <div class="content-title">Your Projects</div>
                 <div id="card-container">
                     <div class="card">
                         <div class="card-title">Super Cool Project</div>
                         <div class="card-content">Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
                         <ul>
-                            <li><a href="#"><img src="" alt="">FAVOURITE</a>
-                            <li><a href="#"><img src="" alt="">VIEW</a>
-                            <li><a href="#"><img src="" alt="">FORK</a>
+                            <li><a href="#"><img src="svgs/favourite.svg" alt="favourite-icon"></a>
+                            <li><a href="#"><img src="svgs/view.svg" alt="view-icon"></a>
+                            <li><a href="#"><img src="svgs/fork.svg" alt="fork-icon"></a>
                         </ul>
                     </div>
                     <div class="card">
                         <div class="card-title">Less Cool Project</div>
                         <div class="card-content">Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</div>
                         <ul>
-                            <li><a href="#"><img src="" alt="">FAVOURITE</a>
-                            <li><a href="#"><img src="" alt="">VIEW</a>
-                            <li><a href="#"><img src="" alt="">FORK</a>
+                            <li><a href="#"><img src="svgs/favourite.svg" alt="favourite-icon"></a>
+                            <li><a href="#"><img src="svgs/view.svg" alt="view-icon"></a>
+                            <li><a href="#"><img src="svgs/fork.svg" alt="fork-icon"></a>
                         </ul>
                     </div>
                     <div class="card">
                         <div class="card-title">Impossible App</div>
                         <div class="card-content">In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</div>
                         <ul>
-                            <li><a href="#"><img src="" alt="">FAVOURITE</a>
-                            <li><a href="#"><img src="" alt="">VIEW</a>
-                            <li><a href="#"><img src="" alt="">FORK</a>
+                            <li><a href="#"><img src="svgs/favourite.svg" alt="favourite-icon"></a>
+                            <li><a href="#"><img src="svgs/view.svg" alt="view-icon"></a>
+                            <li><a href="#"><img src="svgs/fork.svg" alt="fork-icon"></a>
                         </ul>
                     </div>
                     <div class="card">
                         <div class="card-title">Easy Peasy App</div>
                         <div class="card-content">Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</div>
                         <ul>
-                            <li><a href="#"><img src="" alt="">FAVOURITE</a>
-                            <li><a href="#"><img src="" alt="">VIEW</a>
-                            <li><a href="#"><img src="" alt="">FORK</a>
+                            <li><a href="#"><img src="svgs/favourite.svg" alt="favourite-icon"></a>
+                            <li><a href="#"><img src="svgs/view.svg" alt="view-icon"></a>
+                            <li><a href="#"><img src="svgs/fork.svg" alt="fork-icon"></a>
                         </ul>
                     </div>
                     <div class="card">
                         <div class="card-title">Ad Blocker</div>
                         <div class="card-content">Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</div>
                         <ul>
-                            <li><a href="#"><img src="" alt="">FAVOURITE</a>
-                            <li><a href="#"><img src="" alt="">VIEW</a>
-                            <li><a href="#"><img src="" alt="">FORK</a>
+                            <li><a href="#"><img src="svgs/favourite.svg" alt="favourite-icon"></a>
+                            <li><a href="#"><img src="svgs/view.svg" alt="view-icon"></a>
+                            <li><a href="#"><img src="svgs/fork.svg" alt="fork-icon"></a>
                         </ul>
                     </div>
                     <div class="card">
                         <div class="card-title">Money Maker</div>
                         <div class="card-content">Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</div>
                         <ul>
-                            <li><a href="#"><img src="" alt="">FAVOURITE</a>
-                            <li><a href="#"><img src="" alt="">VIEW</a>
-                            <li><a href="#"><img src="" alt="">FORK</a>
+                            <li><a href="#"><img src="svgs/favourite.svg" alt="favourite-icon"></a>
+                            <li><a href="#"><img src="svgs/view.svg" alt="view-icon"></a>
+                            <li><a href="#"><img src="svgs/fork.svg" alt="fork-icon"></a>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div id="announcements">
+            <div id="announcements" class="grid-top">
                 <div class="content-title">Announcement</div>
                 <div id="announcement-container">
                     <div class="announcement">
@@ -173,7 +173,7 @@
                     </div>
                 </div>
             </div>
-            <div id="trending">
+            <div id="trending" class="grid-top">
                 <div class="content-title">Trending</div>
                 <div id="trending-container">
                     <div class="trending-item">
