Add Announcements and Trending styling

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </ul>
         </div>
         <div id="main-content">
-            <div id="projects" class="grid-top">
+            <div id="projects">
                 <div class="content-title">Your Projects</div>
                 <div id="card-container">
                     <div class="card">
@@ -156,8 +156,8 @@
                     </div>
                 </div>
             </div>
-            <div id="announcements" class="grid-top">
-                <div class="content-title">Announcement</div>
+            <div id="announcements">
+                <div class="content-title">Announcements</div>
                 <div id="announcement-container">
                     <div class="announcement">
                         <div class="announcement-title">Site Maintenance</div>
@@ -173,28 +173,28 @@
                     </div>
                 </div>
             </div>
-            <div id="trending" class="grid-top">
+            <div id="trending">
                 <div class="content-title">Trending</div>
                 <div id="trending-container">
                     <div class="trending-item">
-                        <div class="avatar">PROFILE_PIC</div>
-                        <div class="trending-user">@tegan</div>
-                        <div class="trending-project">World Peace Builder</div>
+                        <img src="images/avatar1.png" alt="avatar1" class="avatar">
+                        <div class="trending-user grid-bottom">@tegan</div>
+                        <div class="trending-project grid-top">World Peace Builder</div>
                     </div>
                     <div class="trending-item">
-                        <div class="avatar">PROFILE_PIC</div>
-                        <div class="trending-user">@morgan</div>
-                        <div class="trending-project">Super Cool Project</div>
+                        <img src="images/avatar2.png" alt="avatar2" class="avatar">
+                        <div class="trending-user grid-bottom">@morgan</div>
+                        <div class="trending-project grid-top">Super Cool Project</div>
                     </div>
                     <div class="trending-item">
-                        <div class="avatar">PROFILE_PIC</div>
-                        <div class="trending-user">@kendall</div>
-                        <div class="trending-project">Life Changing App</div>
+                        <img src="images/avatar3.png" alt="avatar3" class="avatar">
+                        <div class="trending-user grid-bottom">@kendall</div>
+                        <div class="trending-project grid-top">Life Changing App</div>
                     </div>
                     <div class="trending-item">
-                        <div class="avatar">PROFILE_PIC</div>
-                        <div class="trending-user">@alex</div>
-                        <div class="trending-project">No Traffic Maker</div>
+                        <img src="images/avatar4.png" alt="avatar4" class="avatar">
+                        <div class="trending-user grid-bottom">@alex</div>
+                        <div class="trending-project grid-top">No Traffic Maker</div>
                     </div>
                 </div>
             </div>
